tobago-theme/src/main/scss/_tobago.scss
/* ... */
.tobago-auto-spacing {
  /* Since bootstrap 5.0.0-alpha1 class "form-group" is removed. In the Bootstrap demo "form-group" is replaced with
  "mb-3". But we shouldn't use "mb-3", because it's adding an "!important" to the margin-bottom. With "!important" added
  custom styling is much more complicated. */
  margin-bottom: $spacer;
}

a {
  @include aAndButtonBase();
}

button {
  @include aAndButtonBase();
}

tobago-badge {
  @include badgeBtn();
  @include imageTextSpacing();

  display: inline-block;

  &.btn {
    cursor: initial; //revert cursor attribute on .btn class
  }

  &.badge, .badge {
    // to make badges visible, an default class .badge-secondary is problematic because of the !important modifier
    background-color: var(--#{$prefix}secondary);
  }

  .badge {
    display: block;
  }
}

/* bar -------------------------------------------------------------- */

tobago-bar {
  &.navbar-light .navbar-brand > .tobago-link {
    color: $navbar-light-active-color;

    &:hover, &:focus {
      text-decoration: none;
    }
  }

  &.navbar-dark .navbar-brand > .tobago-link {
    color: $navbar-dark-active-color;

    &:hover, &:focus {
      text-decoration: none;
    }
  }

  .navbar-brand {
    /* Normally links are underlined. A navbar-brand link is NOT underlined. In Tobago, the .navbar-brand class is not
    on the link itself but on the parent tag. */
    @include linkWithoutUnderline();
  }

  tobago-links {
    &.tobago-auto-spacing {
      margin-bottom: 0;
    }

    > .navbar-nav > .nav-item {
      button.tobago-link.nav-link {
        padding: var(--bs-nav-link-padding-y) var(--bs-navbar-nav-link-padding-x);
      }
    }
  }
}

tobago-behavior {
  display: none;
}

/* box -------------------------------------------------------------- */

tobago-box {
  > .card-body {
    overflow-x: hidden;
    overflow-y: auto;
  }
}

.tobago-box-header {
  display: flex;
  justify-content: space-between;
  align-content: center;
}

.card-header {

  > h3:first-child {
    margin-bottom: 0;
    align-self: center;
  }

  .navbar {
    padding: 0;
  }
}

.tobago-button {
  @include imageTextSpacing();
  @include badgeBtn();
  @include markupHideToggleIcon();

  &.badge {
    @each $color, $value in $theme-colors {
      &.btn-#{$color} {
        --#{$prefix}badge-color: #{color-contrast($value)};
      }
    }
  }
}

button.tobago-button {
}

tobago-buttons {
  > .tobago-button {
    display: inline-block;
  }

  > tobago-dropdown:last-child > .tobago-button.dropdown-toggle-split:first-child {
    //split buttons in Tobago have a tobago-dropdown tag included, which leads to an issue with border-radius
    border-top-right-radius: var(--#{$prefix}btn-border-radius);
    border-bottom-right-radius: var(--#{$prefix}btn-border-radius);
  }
}

/* collapsible -------------------------------------------------------------- */

tobago-box.tobago-collapsed .card-body,
tobago-section.tobago-collapsed .tobago-section-content,
tobago-panel.tobago-collapsed {
  display: none;
}

/* date -------------------------------------------------------------- */

tobago-date {
  display: block;

  input {
    min-width: 7em;

    &::-ms-clear {
      /* Remove IE10's "clear field" X button */
      display: none;
    }
  }
}

.tobago-now {
  // dummy for unit tests
}

tobago-dropdown {
  @include buttonDropdownMenu();
  display: inline-block; //make tobago-dropdown height the same the inner button. Important for dropdown-menu position

  &.tobago-dropdown-submenu {
    cursor: pointer;
    position: relative;
    width: 100%;
    float: right;

    &.tobago-show {
      background-color: $dropdown-link-hover-bg;

      > .tobago-dropdown-menu:not(.tobago-disabled) {
        display: block;
      }
    }

    > .dropdown-item::after {
      content: " ";
      float: right;
      border-color: transparent;
      border-style: solid;
      border-width: 5px 0 5px 5px;
      border-left-color: #cccccc;
      margin-top: 7px;
      margin-right: -10px;
    }
  }

  &.dropdown {
    > .tobago-dropdown-menu.show {
      /* "position: fixed" must be set to override position value of
         ".navbar-expand-{sm|md|lg|xl|xxl} .navbar-nav tobago-dropdown > .tobago-dropdown-menu" */
      position: fixed;

      .tobago-dropdown-submenu {
        > .tobago-dropdown-menu {
          /* "position: fixed" must be set to override position value of
             ".navbar-expand-{sm|md|lg|xl|xxl} .navbar-nav tobago-dropdown > .tobago-dropdown-menu" */
          position: fixed;
        }
      }
    }
  }
}

.tobago-dropdown-open, .tobago-dropdown-select {
  // deprecated; must be added for test
}

tobago-file {
  display: block;

  > .input-group, tobago-progress {
    flex: 1 0 0px;
  }
}

/* flexLayout -------------------------------------------------------------- */

tobago-flex-layout {
  display: flex;
  min-width: 0;
  /* without this, Firefox/Webkit are different from IE:
     Set the minimal width to zero make flex-layout responsive for the width,
     even if there is overflowing content.
     currently e.g. PRE-code blocks in the demo are too wide. XXX */
  margin-left: calc(var(--tobago-flex-layout-spacing) * -0.5);
  margin-right: calc(var(--tobago-flex-layout-spacing) * -0.5);

  > * {
    margin-left: calc(var(--tobago-flex-layout-spacing) * 0.5);
    margin-right: calc(var(--tobago-flex-layout-spacing) * 0.5);
  }

  > tobago-flex-layout {
    margin-left: 0;
    margin-right: 0;
  }
}
/* ... */

